# weather_site

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: docker-publish.yml
backend/: .env.sample  Dockerfile.dev  README.md  config.py  pyproject.toml
backend/src/app/: __init__.py  main.py
backend/src/app/api/: __init__.py  weather.py
backend/src/app/pipelines/: __init__.py  weather_hourly.py
backend/src/app/services/: __init__.py  forecast_snapshot_cache.py
backend/src/fastapi_app/: main.py
backend/src/fastapi_app/routes/: __init__.py  zip_geocode_router.py
backend/src/fastapi_app/services/: __init__.py  duckdb.py  zip_geocode_service.py
backend/tests/: test_forecast_snapshot_cache.py  test_weather_hourly_pipeline.py  test_weather_hourly_route.py
backend/tests/fixtures/: hourly.json  points.json
frontend/: Dockerfile.dev  README.md  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/components/: AppShell.tsx  Dashboard.tsx  HourlyGraphPanel.tsx  HourlyTimeline.tsx
frontend/src/components/ui/: skeleton.tsx
