[project]
name = "weather-site-backend"
version = "0.1.0"
description = "Backend API for the weather site POC"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb",
    "dlt",
    "fastapi",
    "httpx",
    "pydantic",
    "uvicorn[standard]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.uv]
package = true
